feat: current project id local storage feature

--- a/src/style.css
+++ b/src/style.css
@@ -97,6 +97,10 @@ table {
     font-size: 2rem;
 }
 
+.checkedTodo {
+    background-color: gray;
+}
+
 input[type = 'checkbox'] {
     height: 2rem;
     width: 2rem;
